Removed unnecessary files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
       <img id="profile" src="images/headshot.png" alt="github profile"></img>
     </a>
-    <span id="desc">I am a first-year Georgia Institute of Technology student majoring in computer science with a specialization in Information Internetworks as well as Systems and Architecture. I am seeking opportunities to gain experience working with backend system development.
+    <span id="desc">I am a first-year Georgia Institute of Technology student majoring in computer science with a specialization in Information Internetworks as well as Systems and Architecture. I am seeking opportunities to gain experience working in backend system development.
   </div>
 
   <div id="resume">
