Included new job

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
       <img id="profile" src="images/headshot.png" alt="github profile"></img>
     </a>
-    <span id="desc">I am a first-year Georgia Institute of Technology student majoring in computer science with a specialization in Information Internetworks as well as Systems and Architecture. I am seeking opportunities to gain experience working in backend system development.
+    <span id="desc">I am a first-year Georgia Institute of Technology student majoring in computer science with a specialization in Information Internetworks as well as Systems and Architecture. I am currently working with Georgia Tech Office of Information Technology Network Services to support the expansive networks across campus.
   </div>
 
   <div id="resume">
@@ -62,10 +62,25 @@
             <div class="dated_activity">
                 <div class="activity_metadata">
                     <div class="activity_title_location">
-                        <p class="activity_title">Student Assistant</p>
+                        <p class="activity_title">Network Hardware Support Student Assistant</p>
+                        <p class="activity_location"><strong>Georgia Tech Office of Information Technology</strong> - Atlanta, Georgia</p>
+                    </div>
+                    <span class="dates">March 2022 - Current</span>
+                </div>
+                <div class="activity_content">
+                    <ul>
+                        <li> Supported the expansive networks across Georgia Tech's campus by configuring and installing switches for the Access Layer project. </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="dated_activity">
+                <div class="activity_metadata">
+                    <div class="activity_title_location">
+                        <p class="activity_title">Facilities Student Assistant</p>
                         <p class="activity_location"><strong>Georgia Tech College of Computing</strong> - Atlanta, Georgia</p>
                     </div>
-                    <span class="dates">August 2021 - Current</span>
+                    <span class="dates">August 2021 - March 2022</span>
                 </div>
                 <div class="activity_content">
                     <ul>
