--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
                 <div class="activity_content">
                     <ul>
-                        <li>Supported 250+ and 10000+ network devices on Georgia Tech’s expansive networks</li>
+                        <li>Supported 10000+ network devices in 250+ buildings on Georgia Tech’s expansive networks</li>
                         <li>Developed internal automation tools, taking a year’s tedious work down to a matter of weeks</li>
                         <li>Upgraded existing network equipment to improve network latency to multi-Gigabit speeds</li>
-                        <li>Created streamlined network device installation processes to reduce network downtime during upgrades</li>
+                        <li>Improved network device installation processes to reduce network downtime during upgrades</li>
                     </ul>
                 </div>
             </div>
