Removed footer and added copyright

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 <div id="spacer"></div>
 <div id="primary">
   <div class="content_container" id="intro">
-    <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
-      <img id="profile" src="images/headshot.png" alt="github profile"></img>
-    </a>
-    <span id="desc">Georgia Institute of Technology student and Network Hardware Support Student Assistant with experience in large scale network support and internal software tools development
+    <span id="desc">Georgia Tech compter science student student and Network Hardware Support Student Assistant with experience in large scale network support and internal software tools development
   </div>
 
   <div id="resume">
@@ -48,7 +45,7 @@
                 </div>
                 <div class="activity_content">
                     <ul>
-                        <li>Pursuing Bachelor's of Science in Computer Science</li>
+                        <li>Pursuing Bachelor's of Science in Computer Science (GPA: 3.5)</li>
                     </ul>
                 </div>
             </div>
@@ -205,26 +202,4 @@
 
   </div>
 </div>
-<div id="footer">
-  <div id="centered">
-    <div id="footer-left">
-      <div id="footer-picture">
-        <img id="footer-image" src="images/headshot.png" width="75px" height="75px" />
-      </div>
-    </div>
-    <div id="footer-right">
-        <div id="footer-contact-images">
-              <a href="mailto:seanmjohns1@gmail.com">
-                <img id="contact-github-image" alt="github" class="contact-image" src="icons/email.png" />
-              </a>
-              <a href="https://github.com/seanmjohns">
-                <img id="contact-github-image" alt="github" class="contact-image" src="icons/github.png" />
-              </a>
-              <a href="https://www.linkedin.com/in/seanmjohns1/">
-                <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="icons/linkedin-white.png" />
-              </a>
-         </div>
-      </div>
-    </div>
-  </div>
-</div>
+<p id="copyright"> © 2022 Sean M. Johnson. All rights reserved. </p>
