--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="activity_content">
                     <ul>
-                        <li>Transition to a new Cisco wireless access point management and configuration platform</li>
+                        <li>Transitioned to a new Cisco wireless access point management and configuration platform</li>
                         <li>Automated the data exportation and importation between platforms to reduce project time from a year to a matter of weeks</li>
                         <li>Utilized Python and Cisco’s APIs to manage data of campus’s 250+ buildings and 7000+ wireless access points</li>
                         <li>Cooperated with neighboring OIT departments to streamline data sharing</li>
