--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="spacer"></div>
 <div id="primary">
   <div class="content_container" id="intro">
-    <span id="desc">Georgia Tech compter science student student and Network Hardware Support Student Assistant with experience in large scale network support and internal software tools development
+    <span id="desc">Georgia Tech computer science student and Network Hardware Support Student Assistant with experience in large scale network support and internal software tools development
   </div>
 
   <div id="resume">
