Updated resume to include new job

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Sean Johnson
         </div>
         <div id="email">
-            <a href="mailto:seanmjohns1@gmail.com"><img src="icons/email.png"/></a>
+            <a href="mailto:sean@seanmjohnson.net"><img src="icons/email.png"/></a>
         </div>
         <div id="github">
             <a href="https://github.com/seanmjohns"><img src="icons/github.png"/></a>
@@ -25,32 +25,10 @@
 <div id="spacer"></div>
 <div id="primary">
   <div class="content_container" id="intro">
-    <span id="desc">Georgia Tech computer science student and Network Hardware Support Student Assistant with experience in large scale network support and internal software tools development
+      <span id="desc">Georgia Tech computer science student and Security Operations Center Security Analyst with experience in cybersecurity research and internal software tools development</span>
   </div>
 
   <div id="resume">
-
-        <div class="content_container resume_container" id="education">
-            <h2 id="education_header">
-                Education
-            </h2>
-
-            <div class="dated_activity" id="georgia_tech">
-                <div class="activity_metadata">
-                    <div class="activity_title_location">
-                        <p class="activity_title">Georgia Institute of Technology</p>
-                        <p class="activity_location">Atlanta, Georgia</p>
-                    </div>
-                    <span class="dates">August 2021 - May 2025</span>
-                </div>
-                <div class="activity_content">
-                    <ul>
-                        <li>Pursuing Bachelor's of Science in Computer Science (GPA: 3.5)</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
         <div class="content_container resume_container" id="experience">
             <h2 id="experience_header">
                 Experience
@@ -59,10 +37,28 @@
             <div class="dated_activity">
                 <div class="activity_metadata">
                     <div class="activity_title_location">
+                        <p class="activity_title">Security Analyst</p>
+                        <p class="activity_location"><strong>Georgia Tech Cybersecurity Security Operations Center (SOC)</strong> - Atlanta, Georgia</p>
+                    </div>
+                    <span class="dates">August 2022 - Current</span>
+                </div>
+                <div class="activity_content">
+                    <ul>
+                        <li>Resolved hundreds of potentially malicious security incidents and suspicious activities</li>
+                        <li>Collaborated with coworkers to reach a verdict regarding incidents</li>
+                        <li>Reasoned with minimal information to detect malicious activity on GT workstations</li>
+                        <li>Documented security incidents in detail to streamline future incident responses</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="dated_activity">
+                <div class="activity_metadata">
+                    <div class="activity_title_location">
                         <p class="activity_title">Network Hardware Support Student Assistant</p>
                         <p class="activity_location"><strong>Georgia Tech Office of Information Technology (OIT) Network Engineering</strong> - Atlanta, Georgia</p>
                     </div>
-                    <span class="dates">March 2022 - Current</span>
+                    <span class="dates">March 2022 - August 2022</span>
                 </div>
                 <div class="activity_content">
                     <ul>
@@ -108,6 +104,54 @@
 
         </div>
 
+        <div class="content_container resume_container" id="projects">
+            <h2 id="projects_header">
+                Projects
+            </h2>
+
+            <div class="dated_activity" id="quickquiz">
+                <div class="activity_metadata">
+                    <div class="activity_title_location">
+                        <p class="activity_title">Georgia Tech Device Manager Platform Transition</p>
+                        <p class="activity_location">Georgia Tech Office of Information Technology (OIT) Network Engineering</p>
+                    </div>
+                    <span class="dates">June 2022 - Current</span>
+                </div>
+                <div class="activity_content">
+                    <ul>
+                        <li>Transitioned to a new Cisco wireless access point management and configuration platform</li>
+                        <li>Automated the data exportation and importation between platforms to reduce project time from a year to a matter of weeks</li>
+                        <li>Utilized Python and Cisco’s APIs to manage data of campus’s 250+ buildings and 7000+ wireless access points</li>
+                        <li>Cooperated with neighboring OIT departments to streamline data sharing</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="content_container resume_container" id="education">
+            <h2 id="education_header">
+                Education
+            </h2>
+
+            <div class="dated_activity" id="georgia_tech">
+                <div class="activity_metadata">
+                    <div class="activity_title_location">
+                        <p class="activity_title">Georgia Institute of Technology</p>
+                        <p class="activity_location">Atlanta, Georgia</p>
+                    </div>
+                    <span class="dates">August 2021 - May 2025</span>
+                </div>
+                <div class="activity_content">
+                    <ul>
+                        <li>Pursuing Bachelor's of Science in Computer Science (GPA: 3.5)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
         <div class="content_container resume_container" id="skills">
             <h2 id="skills">
                 Skills
@@ -143,59 +187,6 @@
                             <img src="icons/linux.png" alt="linux">
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="content_container resume_container" id="projects">
-            <h2 id="projects_header">
-                Projects
-            </h2>
-
-            <div class="dated_activity" id="quickquiz">
-                <div class="activity_metadata">
-                    <div class="activity_title_location">
-                        <p class="activity_title">Georgia Tech Device Manager Platform Transition</p>
-                        <p class="activity_location">Georgia Tech Office of Information Technology (OIT) Network Engineering</p>
-                    </div>
-                    <span class="dates">June 2022 - Current</span>
-                </div>
-                <div class="activity_content">
-                    <ul>
-                        <li>Transitioned to a new Cisco wireless access point management and configuration platform</li>
-                        <li>Automated the data exportation and importation between platforms to reduce project time from a year to a matter of weeks</li>
-                        <li>Utilized Python and Cisco’s APIs to manage data of campus’s 250+ buildings and 7000+ wireless access points</li>
-                        <li>Cooperated with neighboring OIT departments to streamline data sharing</li>
-                    </ul>
-                </div>
-                <div class="activity_metadata">
-                    <div class="activity_title_location">
-                        <p class="activity_title">QuickQuiz</p>
-                        <p class="activity_location">Solo Project</p>
-                    </div>
-                    <span class="dates">January 2021 - June 2021</span>
-                </div>
-                <div class="activity_content">
-                    <ul>
-                        <li>Desktop application assisting students in learning course content through user-created multiple choice and short answer questions</li>
-                        <li>Utilized Java, JavaFX, SQL, and SQLite to store and present user generated content</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="dated_activity" id="quickquiz">
-                <div class="activity_metadata">
-                    <div class="activity_title_location">
-                        <p class="activity_title">Firehawks Robotics Team</p>
-                        <p class="activity_location">School VEX V5 Robotics Team</p>
-                    </div>
-                    <span class="dates">Fall 2019 - May 2021</span>
-                </div>
-                <div class="activity_content">
-                    <ul>
-                        <li>Lead software developer on Fall 2020 - May 2021 robot using C++</li>
-                        <li>Coordinated discussions regarding code organization and game strategy leading up to competitions</li>
-                    </ul>
                 </div>
             </div>
         </div>
